# trailvideocut

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  launcher.py  pyproject.toml  trailvideocut.spec
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-exe.yml
openspec/changes/archive/2026-03-27-plate-detect-cli-debug/: design.md  proposal.md  tasks.md
openspec/specs/cursor-centered-zoom/: spec.md
openspec/specs/davinci-plate-export/: spec.md
openspec/specs/frame-plate-detection/: spec.md
openspec/specs/frame-precise-navigation/: spec.md
openspec/specs/marks-persistence/: spec.md
openspec/specs/plate-blur-export/: spec.md
openspec/specs/plate-blur-preview/: spec.md
openspec/specs/plate-box-refinement/: spec.md
openspec/specs/plate-clearing-actions/: spec.md
openspec/specs/plate-clip-transition-tail/: spec.md
openspec/specs/plate-detection-workflow/: spec.md
openspec/specs/plate-detector/: spec.md
openspec/specs/plate-overlay-ui/: spec.md
openspec/specs/plate-persistence/: spec.md
openspec/specs/source-exclusion-ranges/: spec.md
scripts/: diagnose_plate_frames.py
src/smartcut/: __init__.py  __main__.py  cli.py  config.py  gpu.py  pipeline.py
src/smartcut/audio/: analyzer.py  models.py  structure.py
src/smartcut/editor/: assembler.py  cut_points.py  exporter.py  keyframes.py  models.py  selector.py
src/smartcut/ui/: app.py  export_page.py  main_window.py  review_page.py  setup_page.py  style.py  timeline.py  video_player.py  workers.py
src/smartcut/video/: analyzer.py  models.py  scene_detect.py  scorers_gpu.py
src/trailvideocut/: __init__.py  __main__.py  cli.py  config.py  gpu.py  pipeline.py
src/trailvideocut/audio/: analyzer.py  energy_curve.py  models.py  structure.py
src/trailvideocut/editor/: __init__.py  assembler.py  cut_points.py  exporter.py  keyframes.py  models.py  plate_blur.py  resolve_script.py  selector.py
src/trailvideocut/plate/: blur.py  detector.py  model_manager.py  models.py  projection.py  refiner.py  storage.py  temporal_filter.py
src/trailvideocut/ui/: app.py  exclusions_tab.py  export_page.py  main_window.py  plate_overlay.py  plate_refine_dialog.py  review_page.py  setup_page.py  style.py  timeline.py  video_player.py  workers.py
src/trailvideocut/utils/: frame_math.py
src/trailvideocut/video/: analyzer.py  exclusions.py  marks.py  models.py  scene_detect.py  scorers.py
tests/: conftest.py  test_assembler_blur.py  test_assembler_segments_tail.py  test_audio_analyzer.py  test_cli.py  test_clip_window.py  test_cut_points.py  test_energy_curve.py  test_exclusions_tab.py  test_export_plate_frame_alignment.py  test_exporter_plate_metadata.py  test_frame_navigation.py  test_model_manager.py  test_pipeline_exclusions.py  test_plate_blur.py  test_plate_detector.py  test_plate_detector_variant_invariance.py  test_plate_frame_actions.py  test_plate_models.py  test_plate_overlay.py  test_plate_overlay_clear_confirm_flicker.py  test_plate_overlay_handlers.py  test_plate_overlay_oriented.py  test_plate_projection.py  test_plate_refine_worker.py  test_plate_refiner.py  test_plate_storage.py  test_plate_worker_phone_zones.py  test_refine_end_to_end.py  test_resolve_script.py  test_resolve_script_angle.py  test_review_page_add_plate_angle.py  test_review_page_blur_preview.py  test_review_page_focus.py  test_review_page_orphan_plates.py  test_review_page_plate_model.py  test_review_page_refine_buttons.py  test_review_page_refine_on_add.py  test_review_page_tail_badge.py  test_review_page_transition_tail.py  (+12 more)
(+125 files in other folders)
