[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trailvideocut"
version = "0.1.0"
description = "TrailVideoCut - Automatically cut motorcycle POV videos to sync with music beats"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "librosa>=0.10.0",
    "opencv-python>=4.8.0",
    "moviepy>=2.0.0",
    "scenedetect[opencv]>=0.6.0",
    "ffmpeg-python>=0.2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "soundfile>=0.12.0",
    "opentimelineio>=0.17.0",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0.0"]
ui = ["PySide6>=6.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.scripts]
trailvideocut = "trailvideocut.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/trailvideocut"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
